--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <div class="bold">사용 프로그램</div>
                         </div>
                         <div>
-                            <div>팀 프로젝트(2인)</div>
+                            <div>팀 프로젝트(2인, 60%)</div>
                             <div>2024.08 ~ 2024.09</div>
                             <div>Figma, Visual studio code</div>
                         </div>
@@ -211,8 +211,8 @@
                             <div class="bold">사용 프로그램</div>
                         </div>
                         <div>
-                            <div>팀 프로젝트(2인)</div>
-                            <div>2024.08.07 ~ 2024.08.26</div>
+                            <div>팀 프로젝트(2인, 50%)</div>
+                            <div>2024.08</div>
                             <div>Figma, Adobe Photoshop</div>
                         </div>
                     </div>
