--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         <div>
                             <div>개인 프로젝트</div>
                             <div>2024.09</div>
-                            <div>Figma, Adobe Photoshop, Adobe Illustrator</div>
+                            <div>Adobe Photoshop, Adobe Illustrator, Figma</div>
                         </div>
                     </div>
                 </div>
