--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </div>
                         <div class="btn_box">
                             <button><a href="https://youngheom.github.io/sonykorea/index.html" target="_blank">Page View</a></button>
-                            <button><a href="https://youngheom.github.io/process/index.html" target="_blank">Process View</a></button>
+                            <button><a href="https://youngheom.github.io/process/img/%EC%86%8C%EB%8B%88%EC%BD%94%EB%A6%AC%EC%95%84%ED%94%84%EB%A1%9C%EC%84%B8%EC%8A%A4.pdf" target="_blank">Process View</a></button>
                         </div>
                     </div>
                     <img class="line" src="img/드롭점선_소니코리아.svg" alt="">
@@ -141,7 +141,7 @@
                         </div>
                         <div class="btn_box">
                             <button><a href="https://youngheom.github.io/wearingeul/index.html" target="_blank">Main page View</a></button>
-                            <button><a href="https://youngheom.github.io/process/index-2.html" target="_blank">Process View</a></button>
+                            <button><a href="https://youngheom.github.io/process/img/%EA%B8%80%EC%9E%85%EB%8B%A4%ED%94%84%EB%A1%9C%EC%84%B8%EC%8A%A4.pdf" target="_blank">Process View</a></button>
                         </div>
                     </div>
                     <div class="txt_box">
@@ -213,7 +213,7 @@
                             여름과 여행하면 떠오르는 색상인 파란색으로 앱의 전체적으로 깔끔하고 시원한 느낌을 연출했습니다. 
                         </div>
                         <div class="btn_box">
-                            <button><a href="https://youngheom.github.io/process/index-3.html" target="_blank">Process View</a></button>
+                            <button><a href="https://youngheom.github.io/process/img/%EB%96%A0%EB%82%98%EC%9E%90%EA%B3%A0%ED%94%84%EB%A1%9C%EC%84%B8%EC%8A%A4.pdf" target="_blank">Process View</a></button>
                         </div>
                     </div>
                     <img class="line" src="img/드롭점선_떠나자고.svg" alt="">
